@@ -23,8 +23,7 @@ pipeline {
 /*************************************************/
 
    environment {
-      registry = "souhirabd/gpro-ci"
-      MAVEN_OPTS = "-Xmx512m -XX:MaxPermSize=128m"
+      registry = "anouarbensaad/gpro-ci"
 
       // Jenkins credentials (add dockerhub , user&password => dockerhub account)
       registryCredential = 'dockerhub'
@@ -34,7 +33,7 @@ pipeline {
    
 /*************************************************/
 
-   agent none
+   agent any
 
 /*************************************************/
 
@@ -47,8 +46,7 @@ pipeline {
       * add jenkins webhook and set ngrok forwarding if u in localhost, to build after push automatics. 
       */
 
-     stage('Checkout SCM') {  
-        agent any
+     stage('Checkout SCM') {          
          steps {
             checkout scm
          }
@@ -87,7 +85,7 @@ pipeline {
                         "Sonar Scan": {
                            sh """
                            mvn sonar:sonar \
-                              -Dsonar.host.url=${env.SONARQUBE_HOST} \
+                              -Dsonar.host.url=http://192.168.1.13:9000 \
                            """
                         }
                   )
@@ -125,9 +123,6 @@ pipeline {
       }
 
       stage('Build') {
-          agent { 
-                label 'dockernode'
-            }
          when {
             expression {env.GIT_BRANCH == 'origin/master'}
          }
@@ -151,6 +146,7 @@ pipeline {
             }
          }
       }
+/*
       stage('Deploy') {
       
          when {
@@ -172,6 +168,7 @@ pipeline {
             }
          }
       }
+  */
       stage('Collect Logs') {
          steps {
          sh "echo Logs directory: ${workspace}/target/logs"
@@ -201,10 +198,69 @@ pipeline {
       } 
       success {
          echo 'I success :D'
+
+         /**
+         * SMTP Server Configurations :
+         *   Manage Jenkins > Configure System > search for “Extended E-mail Notification”.
+         *     1- SMTP server : smtp.gmail.com
+         *     2- Allow : Use SMTP Authentification.
+         *     3- sender email & Password. 
+         */
+
+
+         emailext (
+            // in body html & css code.
+            body: """
+               <head>
+                  <style type="text/css">
+                     body{margin: 0px;padding: 0px;      font-family:Arial, Helvetica, sans-serif}img{margin-left: 50px;float: left;width: 22px;}   .container{width: 1100px;margin: 100px auto;box-sizing: border-box;}   .container .column {width: calc(40.3% - 10px);height: 40%;float: left;padding: 0 0 20px;margin: 0 15px;box-sizing: border-box;   text-align: center;background: #fff;overflow: hidden;box-shadow: 0 10px 10px rgba(3, 77, 13, 0.486);transition: .5s;}   .title{background: #b5ffd8;padding: 20px 0;}.title .fa{color: #1f9438;font-size: 60px;}   .title h2{margin:0;padding: 0;font-size: 24px;color : #1f9438;font-weight: 700;text-transform: uppercase;}   .branch{padding: 10px;}   .branch h4{margin:0;padding:0;color: #323f3e;font-weight: 400;font-size: 30px;}   .branch h4 span{font-weight: 700;font-size : 60px;}   .info ul{margin: 0;padding: 0;}.info ul li{list-style: none;padding: 15px 10px;border-bottom: 1px solid rgba(0,0,0,.05);   font-weight: 300;}   .option ul li:last-child{border-bottom: none;}.option ul li .fa-check{color: #4caf50}
+                  </style>
+               </head>
+               <body>
+                  <div class="container"><div class="column"><div class="title"><h2><i><b>Build ${JOB_NAME} </b></i><h2></div><div class="branch"><h4> Master </h4></div><div class="info"><ul><li><span>Build URL:</span><a href="root">url</a></li><li><span>Project:</span> ${JOB_NAME}</li><li><span>Date of build:</span> ${JOB_NAME}</li><li><span>Build duration:</span> ${JOB_NAME}</li></ul></div></div></div>
+               </body>
+            """,
+            attachLog: true,
+            compressLog: true,
+            attachmentsPattern: "$reportZipFile",
+            recipientProviders: [[$class: 'DevelopersRecipientProvider'],
+            [$class: "RequesterRecipientProvider"]],
+            subject: "${env.JOB_NAME}:${BUILD_NUMBER} - Failed",
+         )
       }
       failure {
+         emailext (
+            body: """
+               <head>
+                  <style type="text/css">
+                     body{margin: 0px;padding: 0px;      font-family:Arial, Helvetica, sans-serif}img{margin-left: 50px;float: left;width: 22px;}   .container{width: 1100px;margin: 100px auto;box-sizing: border-box;}   .container .column {width: calc(40.3% - 10px);height: 40%;float: left;padding: 0 0 20px;margin: 0 15px;box-sizing: border-box;   text-align: center;background: #fff;overflow: hidden;box-shadow: 0 10px 10px rgba(3, 77, 13, 0.486);transition: .5s;}   .title{background: #b5ffd8;padding: 20px 0;}.title .fa{color: #1f9438;font-size: 60px;}   .title h2{margin:0;padding: 0;font-size: 24px;color : #1f9438;font-weight: 700;text-transform: uppercase;}   .branch{padding: 10px;}   .branch h4{margin:0;padding:0;color: #323f3e;font-weight: 400;font-size: 30px;}   .branch h4 span{font-weight: 700;font-size : 60px;}   .info ul{margin: 0;padding: 0;}.info ul li{list-style: none;padding: 15px 10px;border-bottom: 1px solid rgba(0,0,0,.05);   font-weight: 300;}   .option ul li:last-child{border-bottom: none;}.option ul li .fa-check{color: #4caf50}
+                  </style>
+               </head>
+               <body>
+                  <div class="container"><div class="column"><div class="title"><h2><i><b>Build ${JOB_NAME} </b></i><h2></div><div class="branch"><h4> Master </h4></div><div class="info"><ul><li><span>Build URL:</span><a href="root">url</a></li><li><span>Project:</span> ${JOB_NAME}</li><li><span>Date of build:</span> ${JOB_NAME}</li><li><span>Build duration:</span> ${JOB_NAME}</li></ul></div></div></div>
+               </body>
+            """,
+            attachLog: true,
+            compressLog: true,
+            attachmentsPattern: "$reportZipFile",
+            recipientProviders: [[$class: 'DevelopersRecipientProvider'],
+            [$class: "RequesterRecipientProvider"]],
+            subject: "${env.JOB_NAME}:${BUILD_NUMBER} - Failed",
+         )
          echo "I Fail :("
       }
+   }
+
+/*************************************************/
+
+   options {
+      // keep just only last 10 builds
+      buildDiscarder(logRotator(numToKeepStr: '10'))
+      // job expire after 60 minutes
+      timeout(
+         time: 60,
+         unit: 'MINUTES'
+      )
    }
    
 }
